--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
   flutter_rating_bar: ^4.0.1
+  introduction_screen: ^3.1.12
+  flutter_svg: ^2.0.10+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
